#108 remake css..... there is another fix for majority of previewer bugs
Remade the CSS because at Add New gallery the wrapper that contains the previewer is too small

--- a/assets/css/modula-cpt.css
+++ b/assets/css/modula-cpt.css
@@ -561,7 +561,7 @@ tr label.th-label {
 }
 .modula-uploader-inline-content {
   position: relative;
-  min-height: max-content;
+  min-height: 300px;
   width: 100%;
 }
 .modula-resizer-enabled .modula-uploader-inline-content {
